--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,7 +80,7 @@ body {
   }
 
   .subheading{
-      @apply font-semibold text-xl text-center text-blue-100
+      @apply font-semibold text-xl text-center text-black
   }
 
   .black-gradient {
